appId: io.hexawallet.keeper
---
- runFlow: _common_unlock_if_needed.yaml
- runFlow:
    when:
      visible:
        id: "btn_LinkedWallet"
    commands:
      - tapOn:
          id: "btn_LinkedWallet"
- tapOn:
    id: "btn_walletSettings"
- tapOn:
    id: "btn_Wallet_Details"
- assertVisible: "Edit wallet name and description"
