appId: io.hexawallet.keeper
---
- runFlow: _common_open_wallet.yaml
- tapOn:
    id: "btn_Settings"
- assertVisible:
    id: "btn_back"
- assertVisible: "Wallet Settings"
- tapOn:
    id: "view_Wallet_Details"
- assertVisible: "Wallet Details"
- assertVisible:
    id: "view_Edit_wallet_name_and_description"
- tapOn:
    id: "view_Edit_wallet_name_and_description"
- assertVisible: "Edit wallet name and description"
- tapOn:
    id: "input_walletName"
- eraseText
- inputRandomPersonName
- inputText: " wallet"
- tapOn:
    id: "input_walletDescription"
- eraseText
- inputRandomText
- hideKeyboard
- tapOn:
    id: "btn_primaryText"
- runFlow:
    when:
      visible:
        id: "modal_loading"
    commands:
      - waitForAnimationToEnd:
          timeout: 5000
- runFlow:
    when:
      visible: "Wallet details updated"
    commands:
      - tapOn:
          id: "btn_back"
- tapOn:
    id: "btn_back"
- tapOn:
    id: "btn_back"
