appId: io.hexawallet.keeper
---
- tapOn:
    id: 'btn_App_Backup}'
- waitForAnimationToEnd:
    timeout: 1000
- assertVisible:
    id: 'btn_back'
- assertVisible: 'Backup Wallet'
- assertVisible: 'Setup backup for Keeper'
- assertVisible:
    id: 'view_Export_app_individual_phrase'
- tapOn:
    id: 'view_Export_app_individual_phrase'
    waitToSettleTimeoutMs: 500
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: 'Confirm Passcode'
- assertVisible: 'To backup app recovery phrase'
- tapOn:
    id: 'key_1'
- tapOn:
    id: 'key_2'
- tapOn:
    id: 'key_3'
- tapOn:
    id: 'key_4'
- assertVisible:
    id: 'btn_primaryText'
- tapOn:
    id: 'btn_primaryText'
- assertVisible: 'Recovery Phrase'
- tapOn: 'Make sure you keep them safe'
- tapOn:
    id: 'btn_seed_word_0'
- assertTrue: '${output.text_seed_word_0 != "*****"}'
- tapOn:
    id: 'btn_seed_word_3'
- assertTrue: '${output.text_seed_word_0 ="*****"}'
- assertTrue: '${output.text_seed_word_3 != "*****"}'
- tapOn:
    id: 'btn_back'
- waitForAnimationToEnd:
    timeout: 1000
- tapOn:
    id: 'btn_back'
- waitForAnimationToEnd:
    timeout: 1000
