appId: io.hexawallet.keeper
---
- runFlow: _common_open_manage_keys.yaml
- tapOn:
    id: "btn_Mobile Key"
    index: 0
- tapOn:
    id: "btn_Health Check"
- runFlow:
    when:
      visible:
        id: "modal_secondary_btn"
    commands:
      - tapOn:
          id: "modal_secondary_btn"
- runFlow:
    when:
      visible:
        id: "modal_secondary_btn"
    commands:
      - tapOn:
          id: "modal_secondary_btn"
- assertVisible:
    id: "btn_back"
- tapOn:
    id: "btn_back"
- extendedWaitUntil:
    visible: "Manage Keys"
    timeout: 20000
- tapOn:
    id: "btn_back"
