appId: io.hexawallet.keeper
---
- runFlow: _common_open_manage_keys.yaml
- tapOn:
    id: "btn_Mobile Key"
    index: 0
- tapOn:
    id: "btn_Settings"
- runFlow:
    when:
      visible:
        id: "btn_Hide signer"
    commands:
      - tapOn:
          id: "btn_Hide signer"
      - assertVisible:
          id: "modal_passcode_verify"
      - runFlow: _common_enter_passcode_1111.yaml
      - tapOn:
          id: "btn_primaryText"
- runFlow:
    when:
      visible:
        id: "btn_Show and delete keys"
    commands:
      - assertVisible:
          id: "btn_Show and delete keys"
- tapOn:
    id: "btn_back"
- extendedWaitUntil:
    visible: "Manage Keys"
    timeout: 15000
- tapOn:
    id: "btn_back"
