appId: io.hexawallet.keeper
---
# - runFlow: login.yaml
- tapOn:
    id: 'view_wallet_0'
    index: 0
- tapOn:
    id: btn_Settings
- assertVisible:
    id: 'view_Receive_Test_Sats'
- tapOn:
    id: 'view_Receive_Test_Sats'
- extendedWaitUntil:
    visible: '5000 Sats Received'
    timeout: 30000
- repeat:
    while:
      notVisible:
        id: 'btn_transaction_0'
    commands:
      - swipe:
          from:
            id: list_transactions
          direction: DOWN
