appId: io.hexawallet.keeper
---
- extendedWaitUntil:
    visible: 'Create a passcode'
    timeout: 20000
- assertVisible: 'Create'
- tapOn:
    id: 'key_1'
- tapOn:
    id: 'key_1'
- tapOn:
    id: 'key_1'
- tapOn:
    id: 'key_1'
- waitForAnimationToEnd:
    timeout: 2000
- assertVisible: 'Create'
- assertVisible: 'Confirm your passcode'
- tapOn:
    id: 'key_1'
- tapOn:
    id: 'key_1'
- tapOn:
    id: 'key_1'
- tapOn:
    id: 'key_4'
- assertVisible: 'Passcodes do NOT match'
- tapOn:
    id: 'btn_clear'
- assertNotVisible: 'Passcodes do NOT match'
- tapOn:
    id: 'key_1'
- tapOn: 'Create'
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: 'Continue'
- tapOn: 'Continue'
- tapOn: 'Cancel'
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: 'Get Started'
- tapOn: 'Get Started'
