appId: io.hexawallet.keeper
---
- assertVisible:
    id: 'btn_choosePlan'
- tapOn:
    id: 'btn_choosePlan'
- tapOn:
    id: 'btn_Mobile Key'
    index: 0
- tapOn:
    id: 'btn_Settings'
